kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: $SERVICE_NAME-fe
  labels:
    app: $SERVICE_NAME-fe
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: $SERVICE_NAME-fe
