kube/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: $SERVICE_NAME-fe-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/server-snippets: 'gzip on;'
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - $SERVICE_NAME.joymify.com
      secretName: $SERVICE_NAME-fe-joymify
  rules:
    - host: $SERVICE_NAME.joymify.com
      http:
        paths:
          - backend:
              serviceName: $SERVICE_NAME-fe
              servicePort: 80
